[package]
name = "finitely"
version = "0.1.0"
edition = "2021"
authors = ["Patrik Buhring <patrikbuhring@gmail.com>"]
description = "Arithemtic over finite polynomial rings"
repository = "https://github.com/OptimisticPeach/finitely"
readme = "readme.md"
license = "MIT OR Apache-2.0"
keywords = ["math", "finite", "field", "ring", "integer"]
categories = ["algorithms", "data-structures", "mathematics", "no_std"]
rust-version = "1.84.0"

[dependencies]
